--- a/src/infrastructure/infrastructure.csproj
+++ b/src/infrastructure/infrastructure.csproj
@@ -8,8 +8,11 @@
 	<ItemGroup>
 	<PackageReference Include="Dapper" Version="2.1.35" />
 	<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
-	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+	<PackageReference Include="Microsoft.SemanticKernel" Version="1.51.0" />
+	<PackageReference Include="Microsoft.SemanticKernel.Connectors.Google" Version="1.51.0-alpha" />
+	<PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.1" />
 	</ItemGroup>
 
 </Project>
