--- a/src/api/api.csproj
+++ b/src/api/api.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\mcp.tools\mcp.tools.csproj" />
+  </ItemGroup>
+
 </Project>
