--- a/src/sse.client/sse.client.csproj
+++ b/src/sse.client/sse.client.csproj
@@ -6,18 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
-    <PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.1" />
   </ItemGroup>
-
   <ItemGroup>
-    <Folder Include="Tools\" />
+    <ProjectReference Include="..\infrastructure\infrastructure.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\mcp.tools\mcp.tools.csproj" />
-  </ItemGroup>
-
 </Project>
