--- a/src/util/client/client.csproj
+++ b/src/util/client/client.csproj
@@ -6,10 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\infrastructure\infrastructure.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\infrastructure\infrastructure.csproj" />
+	</ItemGroup>
+
 </Project>
