--- a/src/util/shipment.client/shipment.client.csproj
+++ b/src/util/shipment.client/shipment.client.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
-  </ItemGroup>
+  </ItemGroup>	
+	
+	
   <ItemGroup>
-    <ProjectReference Include="..\infrastructure\infrastructure.csproj" />
+    <ProjectReference Include="..\..\infrastructure\infrastructure.csproj" />
   </ItemGroup>
+
 </Project>
