--- a/src/infrastructure/infrastructure.csproj
+++ b/src/infrastructure/infrastructure.csproj
@@ -11,11 +11,14 @@
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 	<PackageReference Include="Microsoft.SemanticKernel" Version="1.51.0" />
+	<PackageReference Include="Microsoft.SemanticKernel.Agents.Orchestration" Version="1.54.0-preview" />
+	<PackageReference Include="Microsoft.SemanticKernel.Agents.Runtime.InProcess" Version="1.54.0-preview" />
 	<PackageReference Include="Microsoft.SemanticKernel.Connectors.Google" Version="1.51.0-alpha" />
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.Abstractions" Version="1.54.0" />
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.54.0" />
 		<PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.54.0" />
 	<PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.1" />
+
 	</ItemGroup>
 
 </Project>
