--- a/src/servers/vessel.api/Properties/launchSettings.json
+++ b/src/servers/vessel.api/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "launchUrl": "SSE",
       "applicationUrl": "http://localhost:5102",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     },
     "https": {
@@ -26,7 +26,7 @@
       "launchUrl": "SSE",
       "applicationUrl": "https://localhost:7289;http://localhost:5102",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     },
     "IIS Express": {
@@ -34,7 +34,7 @@
       "launchBrowser": true,
       "launchUrl": "SSE",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     }
   }
