--- a/src/servers/vessel.api/appsettings.json
+++ b/src/servers/vessel.api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+    "Jwt": {
+      "Authority": "https://login.microsoftonline.com/<tennatid>/v2.0",
+      "Audience": "api://<audinecid>",
+      "ValidIssuers": [
+        "https://login.microsoftonline.com/<tennatid>/v2.0",
+        "https://sts.windows.net/<tennatid>/"
+      ]
+    }
+  
 }
