--- a/src/agent.invoker/appsettings.json
+++ b/src/agent.invoker/appsettings.json
@@ -3,5 +3,11 @@
   "GitAI": "",
   "o4-mini": "",
   "o4-mini-url": "",
-  "gpt-4o-url": ""
+  "gpt-4o-url": "",
+  "Authentication": {
+    "ClientId": "",
+    "ClientSecret": "",
+    "AccessTokenUrl": "https://login.microsoftonline.com/<tenantid>/oauth2/v2.0/token",
+    "Scope": ""
+  }
 }
