--- a/src/infrastructure/infrastructure.csproj
+++ b/src/infrastructure/infrastructure.csproj
@@ -10,6 +10,7 @@
 	<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
 	<PackageReference Include="Microsoft.SemanticKernel" Version="1.51.0" />
 	<PackageReference Include="Microsoft.SemanticKernel.Agents.Orchestration" Version="1.54.0-preview" />
 	<PackageReference Include="Microsoft.SemanticKernel.Agents.Runtime.InProcess" Version="1.54.0-preview" />
