--- a/src/servers/vessel.api/Properties/launchSettings.json
+++ b/src/servers/vessel.api/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "SSE",
+      "launchUrl":"",
       "applicationUrl": "http://localhost:5102",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "local"
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "SSE",
+      "launchUrl":"",
       "applicationUrl": "https://localhost:7289;http://localhost:5102",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "local"
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "SSE",
+      "launchUrl":"",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "local"
       }
