--- a/src/util/reposition.server/Properties/launchSettings.json
+++ b/src/util/reposition.server/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "sse",
+      "launchUrl":"",
       "applicationUrl": "http://localhost:5269",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "sse",
+      "launchUrl":"",
       "applicationUrl": "https://localhost:7156;http://localhost:5269",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "sse",
+      "launchUrl":"",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
