--- a/src/infrastructure/infrastructure.csproj
+++ b/src/infrastructure/infrastructure.csproj
@@ -15,11 +15,13 @@
 	<PackageReference Include="Microsoft.SemanticKernel.Agents.Orchestration" Version="1.54.0-preview" />
 	<PackageReference Include="Microsoft.SemanticKernel.Agents.Runtime.InProcess" Version="1.54.0-preview" />
 	<PackageReference Include="Microsoft.SemanticKernel.Connectors.Google" Version="1.51.0-alpha" />
-		<PackageReference Include="Microsoft.SemanticKernel.Agents.Abstractions" Version="1.54.0" />
+		<PackageReference Include="Microsoft.SemanticKernel.Agents.Abstractions" Version="1.57.0" />
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="1.54.0" />
 		<PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.54.0" />
 	<PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.1" />
-
+    <PackageReference Include="Microsoft.SemanticKernel.Agents.AzureAI" Version="1.57.0-preview" />
+    <PackageReference Include="Azure.AI.Agents.Persistent" Version="1.0.0" />
+    <PackageReference Include="Azure.AI.Projects" Version="1.0.0-beta.9" />
 	</ItemGroup>
 
 </Project>
