--- a/src/agent.invoker/appsettings.json
+++ b/src/agent.invoker/appsettings.json
@@ -1,9 +1,8 @@
 {
-  "gpt-4o": "",
-  "GitAI": "",
+
   "o4-mini": "",
   "o4-mini-url": "",
-  "gpt-4o-url": "",
+  "AgentProjectEndpoint": "",
   "Authentication": {
     "ClientId": "",
     "ClientSecret": "",
