--- a/src/servers/booking.api/booking.api.csproj
+++ b/src/servers/booking.api/booking.api.csproj
@@ -8,10 +8,13 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.1" />
-		<PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.2.0-preview.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\infrastructure\infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
