--- a/src/servers/capacity.api/capacity.api.csproj
+++ b/src/servers/capacity.api/capacity.api.csproj
@@ -10,8 +10,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
-		<PackageReference Include="ModelContextProtocol" Version="0.2.0-preview.1" />
-		<PackageReference Include="ModelContextProtocol.AspNetCore" Version="0.2.0-preview.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\infrastructure\infrastructure.csproj" />
 	</ItemGroup>
 </Project>
